<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/ScreenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/settings_tethering_desc"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_open_tethering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_button_tethering" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_usb_desc"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_open_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/settings_button_open_settings" />

</LinearLayout>
